# rag-agent-ucy

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  warmup.ipynb
data/: course_list.json  forms.json  scraped_urls.json
data/markdown_extracts/: cs.ucy.ac.cy_index.php_education_postgrad_master-in-cognitive-systems.md  dsi.education.md  www.cs.ucy.ac.cy_index.php_education_postgrad_master-in-artificial-intelligence.md  www.globed.eu.md  www.ucy.ac.cy.md  www.ucy.ac.cy_aasw_bannerweb.md  www.ucy.ac.cy_aasw_student-welfare_housing-office_activities.md  www.ucy.ac.cy_aasw_student-welfare_housing-office_applying-for-accommodation.md  www.ucy.ac.cy_aasw_student-welfare_housing-office_private-accommodation.md  www.ucy.ac.cy_aasw_student-welfare_housing-office_resident-assistants.md  www.ucy.ac.cy_aasw_student-welfare_housing-office_student-halls.md  www.ucy.ac.cy_aasw_student-welfare_housing-office_summer-accommodation.md  www.ucy.ac.cy_aasw_student-welfare_social-support_financial-support.md  www.ucy.ac.cy_aasw_studies_undergraduate-studies_candidates_from_cyprus.md  www.ucy.ac.cy_aasw_studies_undergraduate-studies_exam-schedule.md  www.ucy.ac.cy_aasw_studies_undergraduate-studies_international_students.md  www.ucy.ac.cy_aasw_studies_undergraduate-studies_schedule-classes.md  www.ucy.ac.cy_aasw_studies_undergraduate-studies_undergraduate_rules.md  www.ucy.ac.cy_aasw_studies_undergraduate-studies_upopsifioi-apo-ellada.md  www.ucy.ac.cy_afn_programmes-of-study_master-in-finance.md  www.ucy.ac.cy_byz.md  (+51 more)
src/: agent_config.py  context_model.py  prompts.py  tools.py
